<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <EditTextPreference
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/server_address_preference"
        android:key="server_address_prefernce"
        android:summary="@string/server_address_preference_sum"
        android:numeric="integer"
        android:defaultValue="@string/server_address_preference_default" />
    <EditTextPreference
        android:defaultValue="@string/server_port_preference_default"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/server_port_preference"
        android:key="server_port_preference"
        android:summary="@string/server_port_preference_sum"
        android:numeric="integer" />
</PreferenceScreen>
