<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#8fa0a7"
    tools:context="ch.ethz.inf.vs.a3.kellerd.chat.MainActivity">

    <EditText
        android:id="@+id/username_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/username_label"
        android:ems="10" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_button"
        android:onClick="onJoinButtonClick" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        android:onClick="onSettingsButtonClick" />

</LinearLayout>
